; ModuleID = '/home/carl/AnghaBench/memcached/extr_items.c_item_make_header.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_items.c_item_make_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32, i32, i8*, i64*)* @item_make_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @item_make_header(i64 %0, i32 %1, i32 %2, i8* %3, i64* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64*, align 8
  store i64 %0, i64* %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i64* %4, i64** %10, align 8
  %11 = load i32, i32* %7, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %5
  %14 = load i64*, i64** %10, align 8
  store i64 0, i64* %14, align 8
  br label %17

15:                                               ; preds = %5
  %16 = load i64*, i64** %10, align 8
  store i64 4, i64* %16, align 8
  br label %17

17:                                               ; preds = %15, %13
  %18 = load i64, i64* %6, align 8
  %19 = add i64 4, %18
  %20 = load i64*, i64** %10, align 8
  %21 = load i64, i64* %20, align 8
  %22 = add i64 %19, %21
  %23 = load i32, i32* %8, align 4
  %24 = sext i32 %23 to i64
  %25 = add i64 %22, %24
  ret i64 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
